Fix refresh ui issue, letters were too small

--- a/style.css
+++ b/style.css
@@ -12,22 +12,6 @@ body
     white-space:        nowrap;
 }
 
-#modifier-deck
-{
-    display:            -webkit-box;
-    -webkit-box-orient: horizontal;
-    -webkit-box-pack:   center;
-    -webkit-box-lines:  multiple;
-
-    display:            -webkit-flex;
-    -webkit-flex-wrap:  wrap;
-    -webkit-justify-content: space-around;
-
-    display:            flex;
-    flex-wrap:          wrap;
-    justify-content:    space-around;
-}
-
 #topmenu
 {
     display:            block;
@@ -54,9 +38,6 @@ body
 
 @media only screen and (max-height: 480px) and (orientation: portrait) {
     #tableau {
-        -webkit-box-orient: vertical;
-    }
-    #modifier-deck{
         -webkit-box-orient: vertical;
     }
 }
